# open-downloader-cli

./: .gitignore  LICENSE  README.md  odl.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: tests.yml
odl/: __init__.py  __main__.py  cli.py  config.py  constants.py  cookies.py  diagnostics.py  downloader.py  errors.py  logging_setup.py  models.py  playlist.py  playlist_state.py  proxy_pool.py  state.py  validators.py
tests/: test_odl.py
