[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "open-downloader-cli"
version = "2.1.0"
description = "A simple, secure, resumable YouTube downloader for the command line, built on yt-dlp"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "yt-dlp",
    "rich",
    "cryptography",
]

[project.scripts]
odl = "odl.cli:main"

[tool.setuptools]
packages = ["odl"]
