[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "open-downloader-cli"
version = "2.3.0"
description = "A simple, secure, resumable downloader for the command line, built on yt-dlp (supports any site yt-dlp does, not just YouTube)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "M.Soleimani", email = "msoleimaniphone@gmail.com" },
]
keywords = ["youtube", "downloader", "yt-dlp", "cli", "video", "cross-platform", "vimeo", "twitter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "yt-dlp",
    "rich",
    "cryptography",
]

[project.urls]
Homepage = "https://github.com/msoleimani62/open-downloader-cli"
Repository = "https://github.com/msoleimani62/open-downloader-cli"
Issues = "https://github.com/msoleimani62/open-downloader-cli/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[project.scripts]
odl = "odl.cli:main"

[tool.setuptools]
packages = ["odl"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["odl"]
omit = ["odl/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (unused imports, undefined names, etc.)
    "I",   # isort (import ordering)
    "UP",  # pyupgrade (modern syntax)
    "B",   # bugbear (common bug patterns)
    "SIM", # simplify
]
ignore = [
    "E501",  # line length is handled by the formatter, not worth failing CI over
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
